--- a/my htmls/index.css
+++ b/my htmls/index.css
@@ -40,7 +40,7 @@
     text-align: center;
     background-color: #EF4A4A;
     color: white;
-    text-emphasis: bold;
+    font-weight: bold;
     height: 450px;
 }
 .card-img{
@@ -67,10 +67,37 @@
 #cart-table tr {
     border-bottom: 2px solid #000; /* Add a thicker horizontal border between rows */
 }
-.checkout-btn{
-    margin: 0;
-  position: absolute;
-  top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+.center-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+  }
+#display-info-cart{
+    color: crimson;
+    text-decoration: underline;
+}
+
+.total-row{
+    font-weight: bold !important;
+    text-decoration: underline;
+}
+.recipt-box{
+    margin-top: 50px;
+    margin-left: 50px;
+    width: 40%;
+    float: left;
+    border: 2px solid #000;
+    box-sizing: border-box;
+}
+#recipt-title{
+    text-align: center;
+    font-weight: bold;
+    text-decoration: underline;
+}
+.card-info{
+    margin-top: 50px;
+    margin-right: 50px;
+    width: 40%;
+    float: right;
 }
