--- a/client/CSS/index.css
+++ b/client/CSS/index.css
@@ -46,6 +46,11 @@
 .card-img{
     width: 100px;
     height: 100px;
+    margin: 0 auto;  /* Center the image horizontally */
+    max-width: 100%; /* Make sure the image doesn't exceed the container width */
+    display: block;
+    height: 150px; /* Set a fixed height for all images (adjust as needed) */
+    object-fit: cover;
   }
 .add-to-cart{
     background-color: white;
@@ -101,6 +106,11 @@
     width: 40%;
     float: right;
 }
+.card-body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 .extra-info-box{
     text-align: center;
 }
@@ -120,4 +130,13 @@
 .banner-img{
     height: 400px;
     width: 100%;
+}
+.indiv-card{
+    margin-bottom: 5px;
+    margin-right: 5px;
+    text-align: center;
+    background-color: #EF4A4A;
+    color: white;
+    font-weight: bold;
+    height: 350px;
 }
