--- a/client/CSS/MachineDashboard.css
+++ b/client/CSS/MachineDashboard.css
@@ -7,14 +7,19 @@
   .btn-secondary {
     font-size: 1.25rem; /* Adjust the font size as needed */
     padding: 0.5rem 1rem; /* Adjust padding to increase button size */
-    margin-right: 5px; /* Add margin between buttons */
+    margin-right: 5px;
+    margin-top: 100px;
+    margin-bottom: 100px;
   }
 
   .region-table{
-    padding-left: 500px;
-    padding-right: 500px;
+    padding-left: 200px;
+    padding-right: 200px;
     padding-top: 50px;
   }
+  .region-table tr td {
+    padding-bottom: 50px; /* Add vertical spacing between table cells (buttons) */
+}
 
   .dont-know{
     text-decoration: underline;
