--- a/client/CSS/index.css
+++ b/client/CSS/index.css
@@ -1,18 +1,21 @@
 .navbar-cart{
     text-align: right;
     color: crimson;
-    padding-right: 75px;
+    /* padding-right: 75px; */
+    margin-right: 15px; /* Adjust the margin as needed */
 }
 #navbar-select{
     font-weight: bold;
 }
 #cart-img{
-    width: 12.5%;
-    height: 12.5%;
     padding-right: 10px;
+    width: 40px; /* Adjust the width of the cart image */
+    height: auto; /* Maintain the aspect ratio */
 }
 .cart-container{
-    padding-right: 10px;
+    /* padding-right: 10px; */
+    display: flex;
+    align-items: center;
 }
 .navbar-backtomachine{
     text-align: right;
